# diff

./: .gitignore  CMakeLists.txt  diff.txt
cmake/: dependencies.cmake  functions.cmake
main/: PatchMaker.cpp  PatchMaker.h  macro.h  main.cpp
main/diff_creators/: DifferenceCreator.h  MaximumMatchDifferenceCreator.cpp  MaximumMatchDifferenceCreator.h
main/io/: LinesCopier.cpp  LinesCopier.h
main/patch_formats/: PatchFormat.h  UnifiedFormat.cpp  UnifiedFormat.h
main/wrappers/: HashedString.cpp  HashedString.h  flagged.cpp  flagged.h
test/: CMakeLists.txt  round_trip_test.cpp  tools.cpp
test/diff_creators/: maximum_match_creator_test.cpp
test/resources/new/: 2.txt  from_empty.txt
test/resources/old/: equal_text.txt
